src/objects/cpm__Payment_Schedule__c.object
<CustomObject>
    <description>Object is used to schedule Payment Runs in the future</description>
    <fields>
        <fullName>cpm__Additional_SOQL__c</fullName>
        <inlineHelpText>Enter the additional query parameters in this field. Start with &apos;AND&apos;</inlineHelpText>
        <label>Additional SOQL</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buckaroo</fullName>
                </value>
                <value>
                    <fullName>ProcessingHub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Finished_Status__c</fullName>
        <description>The status, to be set by a Sys admin, that indicated the status of a collected installment. This is set when the payment schedule is finalized.</description>
        <label>Finished Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-- Provided by Sys Admin --</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Generator_Class__c</fullName>
        <label>Generator Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Hashcode__c</fullName>
        <label>Hashcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Hashcode_date__c</fullName>
        <label>Hashcode date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GiftAid</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <description>Field get automatically populated in trigger and is used by ProcessingHub to define correct package</description>
        <label>Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__PaymentMethod__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-GiftAid</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-BACS</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Process_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Process Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Processor_Class__c</fullName>
        <label>Processor Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Run_Date__c</fullName>
        <inlineHelpText>When should this payment run be executed</inlineHelpText>
        <label>Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Selection_Date__c</fullName>
        <inlineHelpText>The date which Recurring Payments are selected within this payment run</inlineHelpText>
        <label>Selection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GiftAid-Source</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-for-NPSP</fullName>
                </value>
                <value>
                    <fullName>PaymentHub</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-Source</fullName>
                </value>
                <value>
                    <fullName>DummyExtension</fullName>
                </value>
                <value>
                    <fullName>Non Profit Success Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The current status of this schedule item.</description>
        <inlineHelpText>The current status of this schedule item.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Training Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Membership Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Course Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>HMRC</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>Finance_Payment_Schedule</fullName>
        <filterScope>Queue</filterScope>
        <label>Finance</label>
        <queue>Finance</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>cpm__All_new</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Payment Schedule Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Collection_Date_must_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( AND ( NOT(ISNULL( cpm__Collection_Date__c ) ), cpm__Collection_Date__c &lt;= TODAY() ) , true, false )</errorConditionFormula>
        <errorDisplayField>cpm__Collection_Date__c</errorDisplayField>
        <errorMessage>Collection Date must be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Lock_Fiscal_Period</fullName>
        <active>true</active>
        <errorConditionFormula>cpm__Collection_Date__c &lt;= $Setup.cpm__Lock_Fiscal_Periods__c.cpm__Lock_Payments_Up_To__c</errorConditionFormula>
        <errorMessage>Fiscal period is closed. You can&apos;t edit this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cpm__Mandatory_Field_Check</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( OR ( ISBLANK(TEXT(cpm__Payment_Processor__c)) , ISBLANK (TEXT(cpm__PaymentMethod__c)) , ISBLANK(TEXT(cpm__Source__c)) ), true, false )</errorConditionFormula>
        <errorMessage>Payment Method, Payment Processor and Source are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>paybacs__Target_is_mandatory_for_BACS</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( AND ( 
								ISPICKVAL ( cpm__Payment_Processor__c,  &apos;PaymentHub-BACS&apos; ), 
								ISBLANK ( TEXT(cpm__Target__c) ) 
				) , true, false )</errorConditionFormula>
        <errorDisplayField>cpm__Target__c</errorDisplayField>
        <errorMessage>Target is mandatory for BACS Payment Schedules</errorMessage>
    </validationRules>
</CustomObject>